css/app.css
html {
  overflow-y: overlay;
}

main {
  font-size: 10pt;
  height: 75vh;
  scrollbar-width: none;
}

ul {
  width: 100%;
  margin-bottom: 1.5rem;
}

li {
  word-wrap: break-word;
}

h2 {
  margin-top: 0;
  text-transform: uppercase !important;
}

h5 {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  text-transform: uppercase !important;
  font-weight: bold;
}

h6{
  margin-bottom: 0.1em;
  font-weight: bold;
}

body {
  font-family: "Comic Sans MS", Arial, cursive, sans-serif;
  background-color: whitesmoke;
  margin: auto;
}

.hide {
  display: none !important;
  pointer-events: none !important;
}
.hide * {
  display: none !important;
  pointer-events: none !important;
}

::-webkit-scrollbar { 
  width: 0;
  height: 0;
  background: transparent;
}

.frame {
  position: absolute;
  top: 0;
  pointer-events: none;
}

.border-box, .grid-item {
  border: #0d1b1e 2px solid;
  box-sizing: border-box;
  overflow: hidden;
  /* gap: 10px; */
  background-color: white;
  border-radius: 15px;
}

.selected{
  border-color: yellow !important;
  box-shadow: 0 0 20px yellow;
  animation: anim-pulse 1s ease-in-out infinite alternate;
}

.row {
  flex-direction: row;
  justify-content: center;
  width: 100%;
  display: flex;
  /* margin-bottom: 1em; */
  flex-wrap: wrap;
}

.center-align {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  text-align: center;
}

#pop-up-container{
  top: 0;
  position: fixed;
  height: 100%;
  width: 100%;
  z-index: 1000;
}

#pop-up-background{
  position: absolute;
  background-color: white;
  opacity: 0.5;
  height: 100%;
  width: 100%;
}

#pop-up-content-container{
  position: relative;
  z-index: 1;
  width: 90%;
  max-width: 520px;
  height: 90%;
  box-shadow: 0 0 5em black;
  border-radius: 38px;
}

#pop-up-close{
  position: absolute;
  margin: 0.5em;
  z-index: 200;
  width: 48px;
  height: 48px;
  top: 0;
  right: 0;
}

#pop-up-close > img {
  height: 100%;
}

#pop-up-photo{
  aspect-ratio: 1;
}

#pop-up-inner-content-container{
  position: relative;
  width: calc(100% - 64px);
  height: calc(100% - 64px);
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(2, 1fr);
  grid-row-gap: 5px;
}

.pop-up-1{
  grid-area: 1 / 1 / 2 / 3;
}
.pop-up-2{
  grid-area: 2 / 1 / 3 / 3;
  padding: 1em;
  align-items: start;
  overflow-y: scroll;
  scrollbar-width: 4px;
  
}
.pop-up-2 > ::-webkit-scrollbar { 
  width: auto;
  height: auto;
  background: aliceblue;
}

.pop-up-3{
  height: 78px;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 5px;
}

.pop-up-frame{
  border-style: solid;
  border-width: 32px;
  border-image-source: url(../img/site-style/generate_frame.png);
  border-image-slice: 50;
  width: calc(100% - 64px);
  height: calc(100% - 64px);
  z-index: 100;
}

.fade-in{
  animation: anim-fade-in 0.5s ease-in-out;
}

#main-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  /* grid-auto-rows: minmax(100px, auto); */

  /* display: flex;
  flex-direction: row; */
  align-items: start;
  justify-content: center;
  
  padding-top: 1em;
  margin: auto;
  width: 90%;
  max-width: 1200px;
  gap: 5px;
}

#marquee-text{
  transform: translateY(-50%);
  position: absolute;
  z-index: 101;
  top: calc(50% - 72px);
  animation: anim-float 2s ease-in-out infinite alternate;
  color: white;
  font-size: 32px;
  font-weight: bold;
  text-shadow: 3px 3px 20px #ff99cc, -2px 1px 30px #ff99cc;
  -webkit-text-stroke: 1px black;
}

#main-canvas-container{
  max-width: 600px;
  position: relative;
}

.canvas-frame{
  border-style: solid;
  border-width: 12px;
  border-image-source: url(../img/site-style/preview_frame_sized.png);
  border-image-slice: 3%;
  width: calc(100% - 24px);
  height: calc(100% - 24px);
  z-index: 100;
}

#main-canvas{
  display: block;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
  object-fit: scale-down;
  /* display: none; */
  /* border-style: solid;
  border-width: 12px;
  border-image-source: url(../img/site-style/preview_frame_sized.png);
  border-image-slice: 3%; */
}
#main-canvas-output{
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: 100%;
  width: 600px;
  object-fit: scale-down;
  display: none;
  aspect-ratio: 1;
  /* border-style: solid;
  border-width: 12px;
  border-image-source: url(../img/site-style/preview_frame_sized.png);
  border-image-slice: 3%; */
}

#right-side-container{
  grid-template-rows: calc(100% - 78px) 78px;
  display: grid;
  height: 585px;
  gap: 5px;
}

#user-interface-container{
  height: 100%;
  max-width: 600px;
  display: grid;
  /* grid-template-columns: repeat(2, 1fr); */
  grid-template-columns: 15% calc(85% - 5px);
  gap: 0px 5px;
}

#misc-container{
  height: 100%;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 5px
}

.misc-button{
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  height: calc(100% - 5px);
  padding: 0;
  border-radius: 20px;
}

#misc-button-random{
  position: relative;
  background-image: url('../img/site-style/button1_bg.png');
}

#misc-button-random > img {
  width: 100%;
}

.misc-button-random-frame{
  border-style: solid;
  border-width: 12px;
  border-image-source: url(../img/site-style/button1_f.png);
  border-image-slice: 15;
  width: calc(100% - 24px);
  height: calc(100% - 24px);
  z-index: 100;
}

#misc-button-generate{
  position: relative;
  background-image: url('../img/site-style/button2_bg.png');
}

#misc-button-generate > img {
  top: 3px;
  width: 100%;
}

.misc-button-generate-frame{
  border-style: solid;
  border-width: 12px;
  border-image-source: url(../img/site-style/button2_f.png);
  border-image-slice: 15;
  width: calc(100% - 24px);
  height: calc(100% - 24px);
  z-index: 100;
}

#misc-button-download{
  position: relative;
  background-image: url('../img/site-style/button4_bg.png');
}

#misc-button-download > img {
  width: 100%;
}
/* ... */

